--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "source-map-loader": "^0.2.1",
     "react-dev-utils": "^5.0.2",
     "resolve": "1.6.0",
+    "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "22.0.1",
@@ -54,7 +54,7 @@
     "tslint-react": "^3.2.0",
     "uglifyjs-webpack-plugin": "1.2.5",
     "url-loader": "0.6.2",
-    "webpack": "3.8.1",
+    "webpack": "^4.30.0",
     "webpack-dev-server": "2.11.3",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
